--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astha Group</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="stylesheet" href="/css/global.css">
-    <link rel="stylesheet" href="/css/navbar.css">
-    <link rel="stylesheet" href="/css/image-carousel.css">
-    <link rel="stylesheet" href="/css/aboutus.css">
-    <link rel="stylesheet" href="/css/vision-mission.css">
-    <link rel="stylesheet" href="/css/projects.css">
-    <link rel="stylesheet" href="/css/ctc.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/image-carousel.css">
+    <link rel="stylesheet" href="./css/aboutus.css">
+    <link rel="stylesheet" href="./css/vision-mission.css">
+    <link rel="stylesheet" href="./css/projects.css">
+    <link rel="stylesheet" href="./css/ctc.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.4/tailwind.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
@@ -27,7 +27,7 @@
     <header class="header">
         <div class="logo">
             <a href="javascript:void(home)" onclick="scrollToSection('home')">
-                <img src="/assets/astha_logo_name.png" alt="Astha-logo" draggable="false">
+                <img src="./assets/astha_logo_name.png" alt="Astha-logo" draggable="false">
             </a>
         </div>
         <nav class="navbar">
@@ -124,7 +124,7 @@
             </p>
         </div>
         <div class="aboutus-txt-img">
-            <img src="/assets/astha_logo.png" alt="">
+            <img src="./assets/astha_logo.png" alt="">
         </div>
     </section>
     <!-- About Us Ends -->
@@ -178,7 +178,7 @@
             </div>
         </div>
         <div class="data-img">
-            <img src="/assets/aboutus-visionmission/values.jpg" alt="">
+            <img src="./assets/aboutus-visionmission/values.jpg" alt="">
         </div>
     </section>
     <!-- Vision mission values Ends -->
