--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
 </body>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="/js/navbar.js"></script>
-<script src="/js/scrolling.js"></script>
-<script src="/js/contact-form.js"></script>
+<script src="./js/navbar.js"></script>
+<script src="./js/scrolling.js"></script>
+<script src="./js/contact-form.js"></script>
 
 </html>
